체크박스 추가 전

--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@djthoms/pretty-checkbox": "^3.1.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.0.1",
     "firebase": "^8.6.3",
     "immutability-helper": "^3.1.1",
+    "install": "^0.13.0",
+    "pretty-checkbox": "^3.0.3",
+    "pretty-checkbox-react": "^3.1.0",
+    "rc-checkbox": "^2.3.2",
     "react": "^17.0.2",
+    "react-awesome-button": "^6.5.1",
     "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^1.6.1",
     "react-calendar": "^3.4.0",
     "react-datepicker": "^3.8.0",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
+    "react-native-bouncy-checkbox": "^2.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
